# discord_bot_scaffold

./: Dockerfile  Makefile  README.md  justfile  pyproject.toml  requirements.txt
scaffold/: __main__.py
scaffold/cogs/: base.py  error.py
scaffold/util/: common.py
